# kdo-vtg

./: .gitignore  DEVELOPMENT.md  Dockerfile  FEATURES.md  LICENSE  README.md  build-and-test.sh  docker-compose.yml  pyproject.toml  requirements.txt  test.sh
.github/workflows/: docker.yml
backend/: __init__.py  auth.py  database.py  export.py  main.py  scanner.py
docker/: README.md  docker-compose.prod.yml  docker-compose.yml
docs/: ARCHITECTURE.md  DEVELOPMENT.md  INSTALLATION.md  USAGE.md  questions.md  test-scenarios.md  user-stories.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: index.ts
frontend/src/components/: CollectionsView.tsx  DuplicatesView.tsx  FoldersView.tsx  ProjectsView.tsx  ResultsView.tsx  SettingsView.tsx  Sidebar.tsx  VideoCard.tsx  VideoListView.tsx  VideoModal.tsx
frontend/src/hooks/: useApi.ts
frontend/src/types/: index.ts
scripts/: test.sh
tests/: test_api.py
